--- a/docs/10_domains/20_electrochemistry.mdx
+++ b/docs/10_domains/20_electrochemistry.mdx
@@ -32,7 +32,7 @@ Further data evaluation can yield any kind of time series data or imaging data.
 
 For effective data management, software tools should be selected in a uniform manner within a project or research group with the aim to [organize](/docs/data_organisation)
 and streamline workflows. This involves establishing clear usage guidelines, including metadata templates drawn from minimum information standards for a given method, where available.
-These should be outlined in a [data management plan (DMP)](/docs/dmp) for each project. Many universities supply tools and templates for DMPs (see the [respective article](/docs/dmp) for more information).
+These should be outlined in a [data management plan (DMP)](/docs/dmp) for each project. NFDI4Chem is proud to present an RDMO template specifically tailored to the needs of chemists, see  https://rdmo.nfdi4chem.de/.
 
 An [electronic lab notebook (ELN)](/docs/eln) helps in the day-to-day planning and structured documentation of experiments,
 while some also assist in data workflow management.
