started new structure

--- a/docs/40_smartlab/20_chemotion_eln.mdx
+++ b/docs/40_smartlab/20_chemotion_eln.mdx
@@ -14,9 +14,35 @@ To find out about choosing an ELN, head to the [Choose the right ELN
 article](docs/choose_eln) and test demo instances [here](https://demo.chemotion.scc.kit.edu/).
 :::
 
+![Chemotion Logo](/img/ChemotionELN_Logo.png)
+
 Chemotion is the ELN reference instance in [NFDI4Chem](https://www.nfdi4chem.de/). The software is developed by several developers at different NFDI4Chem sites. It started at the [Karlsruhe institute of Technology (KIT)](https://www.kit.edu/) as part of a DFG-funded project. The extension of the software was and is further supported by the [State Ministry of Baden-Wuerttemberg for Sciences, Research and Arts](https://mwk.baden-wuerttemberg.de/), the Karlsruhe Institute of Technology, and the [German Research Foundation (DFG)](https://www.dfg.de/).
 
 The Chemotion ELN has been specifically designed for chemists, taking into account the unique requirements of chemical laboratory work and documentation. It serves as a powerful digitalization tool for chemistry, aimed at creating seamless workflows throughout the research lifecycle. Achieving this vision is a collaborative effort involving continuous development, enhancement, and expansion of the ELN.
+
+
+## Planning 
+
+Chemotion assist in planning experiments by offering an integrating *structure editor* and pulling information from databases such as [PubChem](https://pubchem.ncbi.nlm.nih.gov/) and 
+<details>
+  <summary>Plannig</summary>
+
+  This is the detailed content
+
+</details>
+
+## Experiments
+
+## Data Generation
+
+## Data Collection
+
+## Analysis
+
+## Data Publication
+
+
+
 
 In addition to its primary focus on chemistry, the ELN is also utilized in various other disciplines due to its versatile functionality that caters to the needs of scientists operating in interdisciplinary environments. These generic elements are continually being refined and adapted. The latest extension, introduced in November 2023, is [LabIMotion](https://www.chemotion.net/docs/labimotion), which enables users to incorporate entirely non-chemical functionalities by designing new modules.
 
