--- a/docs/40_smartlab/20_chemotion_eln.mdx
+++ b/docs/40_smartlab/20_chemotion_eln.mdx
@@ -27,7 +27,7 @@ Chemotion assist in planning experiments by offering an integrating *structure e
 <details>
   <summary>Plannig</summary>
 
-  This is the detailed content
+  This is the detailed content!
 
 </details>
 
