General changes in the structure

--- a/docs/40_smartlab/20_chemotion_eln.mdx
+++ b/docs/40_smartlab/20_chemotion_eln.mdx
@@ -16,12 +16,15 @@ article](docs/choose_eln) and test demo instances [here](https://demo.chemotion.
 
 ![Chemotion Logo](/img/ChemotionELN_Logo.png)
 
-Chemotion is the ELN reference instance in [NFDI4Chem](https://www.nfdi4chem.de/). The software is developed by several developers at different NFDI4Chem sites. It started at the [Karlsruhe institute of Technology (KIT)](https://www.kit.edu/) as part of a DFG-funded project. The extension of the software was and is further supported by the [State Ministry of Baden-Wuerttemberg for Sciences, Research and Arts](https://mwk.baden-wuerttemberg.de/), the Karlsruhe Institute of Technology, and the [German Research Foundation (DFG)](https://www.dfg.de/).
+Chemotion is the ELN reference instance in [NFDI4Chem](https://www.nfdi4chem.de/). The software is developed by several developers at different NFDI4Chem sites. The development started at the [Karlsruhe institute of Technology (KIT)](https://www.kit.edu/) as part of a DFG-funded project. The extension of the software was and is further supported by the [State Ministry of Baden-Wuerttemberg for Sciences, Research and Arts](https://mwk.baden-wuerttemberg.de/), the Karlsruhe Institute of Technology, and the [German Research Foundation (DFG)](https://www.dfg.de/).
 
-The Chemotion ELN has been specifically designed for chemists, taking into account the unique requirements of chemical laboratory work and documentation. It serves as a powerful digitalization tool for chemistry, aimed at creating seamless workflows throughout the research lifecycle. Achieving this vision is a collaborative effort involving continuous development, enhancement, and expansion of the ELN.
+The Chemotion ELN has been specifically designed for chemists, taking into account the unique requirements of chemical laboratory work and documentation. It serves as a powerful digitalization tool for chemistry, aimed at creating seamless workflows throughout the research life cycle. Achieving this vision is a collaborative effort involving continuous development, enhancement, and expansion of the ELN.
 
+To get an overview on how and with which tools Chemotion ELN supports you throughout the whole [reseach data life cycle](docs/data_life_cycle), have a look at the flowchart below expanding the detailed information as you like.
 
-## Planning 
+## Data Life Cycle Support
+
+### Planning 
 
 Chemotion assist in planning experiments by offering an integrating *structure editor* and pulling information from databases such as [PubChem](https://pubchem.ncbi.nlm.nih.gov/) and 
 <details>
@@ -31,20 +34,22 @@ Chemotion assist in planning experiments by offering an integrating *structure e
 
 </details>
 
-## Experiments
+### Experiments
 
-## Data Generation
+### Data Generation
 
-## Data Collection
+### Data Collection
 
-## Analysis
+### Analysis
 
-## Data Publication
+### Data Publication
 
 
-
+## LabIMotion
 
 In addition to its primary focus on chemistry, the ELN is also utilized in various other disciplines due to its versatile functionality that caters to the needs of scientists operating in interdisciplinary environments. These generic elements are continually being refined and adapted. The latest extension, introduced in November 2023, is [LabIMotion](https://www.chemotion.net/docs/labimotion), which enables users to incorporate entirely non-chemical functionalities by designing new modules.
+
+## Chemotion Repository and other Connections
 
 Chemotion ELN offers a specific functionality that facilitates the [publication of research data](/docs/data_publishing): it supports the transfer of data from a user's ELN account to a research data repository. This reduces the scientists' effort in allowing access to research data, which is required by many funding agencies and helpful for the publication of scientific journal articles. Currently, the ELN supports the transfer of data to the [Chemotion repository](https://www.chemotion-repository.net/welcome). Additionally, Chemotion Repository is connected to other databases (e.g. [PubChem](https://pubchem.ncbi.nlm.nih.gov/)) and repositories (e.g. [NMRShiftDB2](https://nmrshiftdb.nmr.uni-koeln.de/), soon to be superseded by [nmrXiv](https://nmrxiv.org/)), to ensure best visibility and a user-friendly search of original research data. The NFDI4Chem team is working on establishing connections to further repositories, in particular, the repositories supported and recommended by NFDI4Chem.
 
@@ -69,13 +74,13 @@ A short introduction to the Chemotion ELN as well as the connection to the Chemo
     ></iframe>
 </VideoPrivacy>
 
-### Documentation, Information, and Contact
+## Documentation, Information, and Contact
 
 Chemotion ELN and its functionalities are described in various publications (see [below](#sources-and-further-information)). For users, developers, and admins, a documentation is available via the project's [website](https://www.chemotion.net/docs). Chemotion ELN is an Open Source development; the source code is available on [GitHub](https://github.com/ComPlat/chemotion_ELN).
 
 NFDI4Chem offers hands-on workshop and Q&A sessions for Chemotion ELN and the LabIMotion extension. Visit the [workshop overview page](https://www.nfdi4chem.de/workshops/) for more information.
 
-## Sources and Further Information
+### Sources and Further Information
 
 -   [Chemotion ELN: an Open Source electronic lab notebook for chemists in academia](https://doi.org/10.1186/s13321-017-0240-0)
 -   [Chemotion-ELN part 2: adaption of an embedded Ketcher editor to advanced research applications](https://doi.org/10.1186/s13321-018-0292-9)
