Further general changes

--- a/docs/40_smartlab/20_chemotion_eln.mdx
+++ b/docs/40_smartlab/20_chemotion_eln.mdx
@@ -26,24 +26,69 @@ To get an overview on how and with which tools Chemotion ELN supports you throug
 
 ### Planning 
 
+<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="10"/>
 Chemotion assist in planning experiments by offering an integrating *structure editor* and pulling information from databases such as [PubChem](https://pubchem.ncbi.nlm.nih.gov/) and 
 <details>
-  <summary>Plannig</summary>
+  <summary>Detailed information</summary>
 
-  This is the detailed content!
+  This is the detailed content
 
 </details>
 
 ### Experiments
 
+<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="10"/>
+
+<details>
+  <summary>Detailed information</summary>
+
+  This is the detailed content
+
+</details>
+
 ### Data Generation
+
+<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="10"/>
+
+<details>
+  <summary>Detailed information</summary>
+
+  This is the detailed content
+
+</details>
 
 ### Data Collection
 
+<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="10"/>
+
+<details>
+  <summary>Detailed information</summary>
+
+  This is the detailed content
+
+</details>
+
 ### Analysis
+
+<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="10"/>
+
+<details>
+  <summary>Detailed information</summary>
+
+  This is the detailed content
+
+</details>
 
 ### Data Publication
 
+<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="10"/>
+
+<details>
+  <summary>Detailed information</summary>
+
+  This is the detailed content
+
+</details>
 
 ## LabIMotion
 
