Section "Experiment" finished

--- a/docs/40_smartlab/20_chemotion_eln.mdx
+++ b/docs/40_smartlab/20_chemotion_eln.mdx
@@ -27,6 +27,7 @@ To get an overview on how and with which tools Chemotion ELN supports you throug
 ### Planning 
 
 <img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="10"/>
+
 Chemotion assists in planning experiments by offering embedded *structure editors*, reading and generating *chemical identifiers*, and pulling information from *databases*.
 <details>
   <summary>Detailed information</summary>
@@ -34,7 +35,7 @@ Chemotion assists in planning experiments by offering embedded *structure editor
   In the Chemotion ELN different entry types can be generated for planning various experimental setups. Generally, all entry types offer the possibility to draw chemical structures directly within the ELN. This is realized by embedded structure editors: *ketcher-rails* and *Ketcher 2* are integrated as default structure editors and furthermore *ChemDraw JS* and *Marvin JS* can be integrated when the needed licences are available.
 
   All structure editors directly convert the chemical structures into common chemical identifiers such as [*InChI*](https://www.inchi-trust.org/) and [*SMILES*](https://doi.org/10.1021%2Fci00057a005) code and automatically generate a MOL file of the chemical structure. Reversely, chemical structures can be generated in the ELN by importing the codes and files mentioned above and additionally [*CAS numbers*](https://www.cas.org/cas-data/cas-registry).
-  
+
   The Chemotion ELN directly pulls information from and links entries to databases such as [*PubChem*](https://pubchem.ncbi.nlm.nih.gov/) and [*CAS SciFinder*](https://www.cas.org/solutions/cas-scifinder-discovery-platform/cas-scifinder). Thus, the planning of experiments is facilitated as all relevant information are automatically integrated into the ELN entries.
 
 </details>
@@ -43,10 +44,13 @@ Chemotion assists in planning experiments by offering embedded *structure editor
 
 <img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="10"/>
 
+During experiments Chemotion supports with *automated calculations*, *structured documentation*, and a *concise overview* of experimental information.
 <details>
   <summary>Detailed information</summary>
 
-  This is the detailed content
+  As relevant information on chemical compounds such as molar mass, density, and purity are stored within the ELN, Chemotion automatically calculates all relevant amounts saving a researcher's time and preventing miscalculations and typos. Furthermore, predefined text snippets and the transfer of reaction information to the description of experiments allow for a fast and facile documentation.
+
+  Due to structured and standardized input fields, the documentation takes place in an uniform and [metadata](docs/metadata)-enriched way. Thus, entries in the Chemotion ELN always give a full but still concise overview on all experimental information facilitating to conduct and document experiments in the laboratory.
 
 </details>
 
