--- a/docs/40_smartlab/20_chemotion_eln.mdx
+++ b/docs/40_smartlab/20_chemotion_eln.mdx
@@ -102,10 +102,11 @@ Analyses can be performed directly in the Chemotion ELN by utilizing one of the 
 
 <img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="10"/>
 
+The Chemotion ELN is connected to several *data repositories* which allows for simple and fast publication of research data.
 <details>
   <summary>Detailed information</summary>
 
-  This is the detailed content
+  Chemotion offers a specific functionality that facilitates the [publication of research data](/docs/data_publishing): it supports the transfer of data from a user's ELN account to a research data repository. Currently, the ELN supports the transfer of data to the [*Chemotion Repository*](https://www.chemotion-repository.net/welcome) and to [*RADAR4Chem*](https://radar4chem.radar-service.eu/radar/en/home). With this, reasearch data including semantic metadata can be easily transferred into a repository reducing a researcher's effort and helping to fulfill the requirements of funding agencies. Additionally, Chemotion is connected to other repositories such as [*nmrXiv*](https://nmrxiv.org/)), to ensure best visibility and a user-friendly search of original research data. Continuously, the NFDI4Chem team is working on establishing connections to further repositories, in particular, the repositories supported and recommended by NFDI4Chem.
 
 </details>
 
@@ -113,9 +114,7 @@ Analyses can be performed directly in the Chemotion ELN by utilizing one of the 
 
 In addition to its primary focus on chemistry, the ELN is also utilized in various other disciplines due to its versatile functionality that caters to the needs of scientists operating in interdisciplinary environments. These generic elements are continually being refined and adapted. The latest extension, introduced in November 2023, is [LabIMotion](https://www.chemotion.net/docs/labimotion), which enables users to incorporate entirely non-chemical functionalities by designing new modules.
 
-## Chemotion Repository and other Connections
-
-Chemotion ELN offers a specific functionality that facilitates the [publication of research data](/docs/data_publishing): it supports the transfer of data from a user's ELN account to a research data repository. This reduces the scientists' effort in allowing access to research data, which is required by many funding agencies and helpful for the publication of scientific journal articles. Currently, the ELN supports the transfer of data to the [Chemotion repository](https://www.chemotion-repository.net/welcome). Additionally, Chemotion Repository is connected to other databases (e.g. [PubChem](https://pubchem.ncbi.nlm.nih.gov/)) and repositories (e.g. [NMRShiftDB2](https://nmrshiftdb.nmr.uni-koeln.de/), soon to be superseded by [nmrXiv](https://nmrxiv.org/)), to ensure best visibility and a user-friendly search of original research data. The NFDI4Chem team is working on establishing connections to further repositories, in particular, the repositories supported and recommended by NFDI4Chem.
+## Chemotion Introductory Video
 
 A short introduction to the Chemotion ELN as well as the connection to the Chemotion repository is demonstrated in this video:
 
