fix: image placement

--- a/docs/40_smartlab/20_chemotion_eln.mdx
+++ b/docs/40_smartlab/20_chemotion_eln.mdx
@@ -14,7 +14,9 @@ To find out about choosing an ELN, head to the [Choose the right ELN
 article](docs/choose_eln) and test demo instances [here](https://demo.chemotion.scc.kit.edu/).
 :::
 
-![Chemotion Logo](/img/ChemotionELN_Logo.png)
+![Placeholder for some kind of Chemotion Illustration?]
+
+<img alt="Chemotion ELN Logo" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align= "left" vspace="30" hspace="50"/>
 
 Chemotion is the ELN reference instance in [NFDI4Chem](https://www.nfdi4chem.de/). The software is developed by several developers at different NFDI4Chem sites. The development started at the [Karlsruhe institute of Technology (KIT)](https://www.kit.edu/) as part of a DFG-funded project. The extension of the software was and is further supported by the [State Ministry of Baden-Wuerttemberg for Sciences, Research and Arts](https://mwk.baden-wuerttemberg.de/), the Karlsruhe Institute of Technology, and the [German Research Foundation (DFG)](https://www.dfg.de/).
 
@@ -26,9 +28,14 @@ To get an overview on how and with which tools Chemotion ELN supports you throug
 
 ### Planning 
 
-<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="10"/>
+<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
 
 Chemotion assists in planning experiments by offering embedded *structure editors*, reading and generating *chemical identifiers*, and pulling information from *databases*.
+
+<br/>
+<br/>  
+<br/>  
+
 <details>
   <summary>Detailed information</summary>
 
@@ -41,10 +48,15 @@ Chemotion assists in planning experiments by offering embedded *structure editor
 </details>
 
 ### Experiments
-
-<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="10"/>
+<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
 
 During experiments Chemotion supports with *automated calculations*, *structured documentation*, and a *concise overview* of experimental information.
+
+<br/>
+<br/>  
+<br/> 
+
+
 <details>
   <summary>Detailed information</summary>
 
@@ -56,9 +68,14 @@ During experiments Chemotion supports with *automated calculations*, *structured
 
 ### Data Generation
 
-<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="10"/>
+<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
 
 For seamless workflows, *analytical devices* can be connected and directly accessed within the Chemotion ELN.
+
+<br/>
+<br/>  
+<br/> 
+
 <details>
   <summary>Detailed information</summary>
 
@@ -68,9 +85,14 @@ For seamless workflows, *analytical devices* can be connected and directly acces
 
 ### Data Collection
 
-<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="10"/>
+<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
 
 Besides the connection of analytical devices to the Chemotion ELN, data of these devices can be automatically transferred, file formats converted, and metadata mapped.
+
+<br/>
+<br/>  
+<br/> 
+
 <details>
   <summary>Detailed information</summary>
 
@@ -84,9 +106,13 @@ Besides the connection of analytical devices to the Chemotion ELN, data of these
 
 ### Analysis
 
-<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="10"/>
+<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
 
 Analyses can be performed directly in the Chemotion ELN by utilizing one of the embedded *spectra editors*.
+
+<br/>
+<br/>  
+<br/>
 <details>
   <summary>Detailed information</summary>
 
@@ -100,9 +126,13 @@ Analyses can be performed directly in the Chemotion ELN by utilizing one of the 
 
 ### Data Publication
 
-<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="10"/>
+<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
 
 The Chemotion ELN is connected to several *data repositories* which allows for simple and fast publication of research data.
+
+<br/>
+<br/>  
+<br/>
 <details>
   <summary>Detailed information</summary>
 
@@ -150,3 +180,4 @@ NFDI4Chem offers hands-on workshop and Q&A sessions for Chemotion ELN and the La
 -   [CHEMSCANNER: extraction and re-use(ability) of chemical information from common scientific documents containing ChemDraw files](https://doi.org/10.1186/s13321-019-0400-5)
 -   [Chemotion ELN documentation](https://chemotion.net/docs/eln)
 -   [Chemotion ELN on Github](https://github.com/ComPlat/chemotion_ELN)
+
