fix: imprint / accessibility update

--- a/src/pages/imprint.mdx
+++ b/src/pages/imprint.mdx
@@ -37,7 +37,7 @@ email: nfdi4chem@uni-mainz.de
 
 ## Accessibility
 
-We have tried hard to make our website as accessible as possible pursuant to the Ordinance on the Creation of Accessible Information Technology in Accordance with the Act on Equal Opportunities of Persons with Disabilities (BITV). Further information is available in the JGU accessibility statement.
+We endeavour to make this website accessible. The legal basis is the State Inclusion Act (InklG RP) and the Barrier-free Information Technology Ordinance Rhineland-Palatinate (BITV RP).
 
 ## Liability / Disclaimer
 
