--- a/docs/10_domains/10_analytical_chemistry.mdx
+++ b/docs/10_domains/10_analytical_chemistry.mdx
@@ -28,7 +28,7 @@ Some open data formats are available for specific data types, such as mass spect
 
 For effective data management, software tools should be selected in a uniform manner within a project or research group with the aim to [organize](/docs/data_organisation)
 and streamline workflows. This involves establishing clear usage guidelines, including metadata templates drawn from minimum information standards for a given method, where available.
-These should be outlined in a [data management plan (DMP)](/docs/dmp) for each project. Many universities supply tools and templates for DMPs (see the [respective article](/docs/dmp) for more information).
+These should be outlined in a [data management plan (DMP)](/docs/dmp) for each project. NFDI4Chem provides an [RDMO template](https://rdmo.nfdi4chem.de/) specifically tailored to the needs of chemists.
 
 General chemistry ELNs can typically be used for analytical chemistry data and may be well suited to your research topic. However, there are also specialised tools that are tailored to the needs of analytical chemists. These tools often include features for managing instrument data, processing raw data files and visualising results. They may also include tools for chemometric analysis.
 
