fix: anchor link

--- a/docs/50_data_publication/50_data_availability_statement.mdx
+++ b/docs/50_data_publication/50_data_availability_statement.mdx
@@ -17,7 +17,7 @@ Depending on the publisher, the data availability statement may be directly adde
 PIDs to the corresponding dataset(s) of a scientific article, with one of the scientific publishers, should be mentioned in the data availability statement, while PIDs to datasets from other researchers which are reused and cited should be added to the reference section. This distinction is important, because the link to the dataset in the PID metadata is set differently, depending onwhether the dataset is a directly related source of information or a reference as its information is reused.
 :::
 
-## Templates for Data Availability Statements
+## Templates for Data Availability Statements {#templates}
 
 #### Data in a publicly accessible repository with DOI
 
