--- a/docs/20_role/50_core_facility_manager.mdx
+++ b/docs/20_role/50_core_facility_manager.mdx
@@ -28,7 +28,7 @@ When thinking about how to store data and make them available, an important star
 
 ### The Situation in Germany
 
-The German Research Council ([DFG](https://www.dfg.de)) summarizes the consensus on the _fundamental principles and standards of good practice_ in science in their Code fo Conduct _Guidelines for Safeguarding Good Research Practice_ [\[1\]](#dfg_code). In guideline 17, a storage of all research data for the period of ten years is demanded, starting from the date of publication. Data storage strategies should therefore contain longterm storage for at least that time.
+The German Research Council ([DFG](https://www.dfg.de)) summarizes the consensus on the _fundamental principles and standards of good practice_ in science in their Code fo Conduct _Guidelines for Safeguarding Good Research Practice_ [\[1\]](#sources). In guideline 17, a storage of all research data for the period of ten years is demanded, starting from the date of publication. Data storage strategies should therefore contain longterm storage for at least that time.
 
 ## How to start
 
@@ -36,7 +36,7 @@ From the perspective of a core facility, it usually makes sense to separately co
 
 ### Data safety
 
-The most important aspect for core facility managers is to preculde data loss. All recorded data should be saved to a **decentral redundant storage** as soon as possible. The easiest way is to automate this by using the onboard command-line tools of the respective system, like `robocopy.exe` on Windows or `rsync` on most UNIX systems [\[2\]](#sync). Both utilities can be used for automatic incremental synchronisation of local and remote storage.
+The most important aspect for core facility managers is to preculde data loss. All recorded data should be saved to a **decentral redundant storage** as soon as possible. The easiest way is to automate this by using the onboard command-line tools of the respective system, like `robocopy.exe` on Windows or `rsync` on most UNIX systems [\[2\]](#sources). Both utilities can be used for automatic incremental synchronisation of local and remote storage.
 
 At most universities, local computing centres will assist in providing decentral and redudant storage. In many cases, this storage can not also be used to provide instrument data to users without direct access to instrument workstations which is usually undesired. Ideally, the remote storage is versioned so that accidental deletions can be reversed.
 
@@ -70,12 +70,9 @@ The challenge of digesting those metadata according to [FAIR guiding principles]
 1. **Parsing of metadata from datasets.** This requires relative little organisation effort in advance but can be difficult depending on the respective data formats. Many instrument vendors use proprietary data formats. If all information, including description, is saved in [binary formats](https://en.wikipedia.org/wiki/Binary_file), the extraction of metadata can be challenging.
 1. **Using a LIMS.** Using a [Laboratory information management system (LIMS)](https://en.wikipedia.org/wiki/Laboratory_information_management_system) allows to efficiently organise all processes connected to sample processing in an electronic fashion. In a way, a LIMS is the core facility counterpart to an [ELN](/docs/eln). If a LIMS is used, the extraction of sample metadata is considerably easier than by hindsight parsing. However, the LIMS requires that the LIMS covers all processes required in the facility. Establishing a LIMS in a core facility may therefore be a complex organisational task.
 
-## Sources
+## Sources {#sources}
 
-1. <span id="dfg_code" />
-   Deutsche Forschungsgemeinschaft (DFG), *Guidelines for Safeguarding Good Research
-   Practice. Code of Conduct*, September 2019, [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3923602.svg)](https://doi.org/10.5281/zenodo.3923602)
-
-2. <span id="sync" />
-   See [Microsoft documentation](https://docs.microsoft.com/en-us/windows-server/administration/windows-commands/robocopy)
+1. Deutsche Forschungsgemeinschaft (DFG), _Guidelines for Safeguarding Good Research
+   Practice. Code of Conduct_, September 2019, [![DOI](https://zenodo.org/badge/DOI/10.5281/zenodo.3923602.svg)](https://doi.org/10.5281/zenodo.3923602)
+2. See [Microsoft documentation](https://docs.microsoft.com/en-us/windows-server/administration/windows-commands/robocopy)
    for `robocopy` or [manpage](https://linux.die.net/man/1/rsync) for `rsync`.
