--- a/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
+++ b/docs/50_data_publication/70_publishing_standards/20_publishing_standards_publishers.mdx
@@ -11,19 +11,19 @@ This guide is based on our standards for data publishing for academic publishers
 
 ![a flowchart for data publishing for academic publishers](/img/data_pub/academic_publishers.png)
 
-## 1. Recommend Trusted, Chemistry-Friendly Repositories
+## 1. Recommend Trusted, Chemistry-Friendly Repositories {#1}
 
 To assist authors in selecting **well-established and community-specific [repositories](/docs/repositories)** for their research data, it is important for journals to recommend trusted [chemistry-friendly repositories](/docs/choose_repository). This information should be included within the author guidelines or data policies to assist researchers during the publication process.
 
-## 2. Include Data Availability Statements
+## 2. Include Data Availability Statements {#2}
 
 Journals should encourage authors to provide a [**data availability statement**](/docs/data_availability_statement) in their manuscripts. To facilitate this, [templates](/docs/data_availability_statement/#templates) should be made available in the journal's author guidelines or similar sections. These templates help authors correctly submit underlying data with their manuscript while effectively communicating how to find and access the data by including DOIs or other [PIDs](/docs/pid), thereby enabling adherence to [FAIR principles](/docs/fair/) (e.g., [A1](/docs/fair#a1).
 
-## 3. Integrate Data Availability Statements into Submission Systems
+## 3. Integrate Data Availability Statements into Submission Systems {#3}
 
 Journals should incorporate a [**data availability statement**](/docs/data_availability_statement) feature into their manuscript submission systems. Once a template has been selected by the submitter, it should remain editable so authors can add additional details about what data are included in their dataset. The submission system must require necessary information such as DOI (specified as either a DOI name or URL), repository name, third-party ownership details if applicable, reasons for restricted access, and instructions on how to access datasets based on the chosen template.
 
-## 4. Link Datasets to Articles in Crossref DOI Metadata
+## 4. Link Datasets to Articles in Crossref DOI Metadata {#4}
 
 Journals should enhance [Crossref](https://www.crossref.org/) DOI metadata by linking articles to datasets using information from data availability statements. By incorporating DOIs and repository names into Crossref metadata according to [FAIR principles](/docs/fair/), journals establish **structured links between article DOIs and dataset DOIs**—ensuring both humans and machines can interpret these relationships effectively.
 
@@ -42,7 +42,7 @@ In agreement with [Crossref's documentation on linking datasets](https://www.cro
 </rel:program>
 ```
 
-## 5. Encourage Pre-submission of Datasets
+## 5. Encourage Pre-submission of Datasets {#5}
 
 Journal author guidelines should explicitly encourage pre-submission of datasets prior to manuscript submission—similar to current practices for crystallographic data published in CSD with [CCDC](https://www.ccdc.cam.ac.uk/). Early publication facilitates manuscript workflows as DOIs are registered beforehand. This can, for example, enable automated DOI quality checks.
 
@@ -50,19 +50,19 @@ Journal author guidelines should explicitly encourage pre-submission of datasets
 A potential drawback is that researchers cannot link their dataset directly to an unpublished manuscript until a DOI has been assigned, usually after its publication, thus requiring manual updates to the dataset metadata post-publication.
 :::
 
-## 6. Include Research Data in Review Processes
+## 6. Include Research Data in Review Processes {#6}
 
 Journals should encourage inclusion of research data during peer review processes by allowing datasets labeled as _under review_. These datasets have reserved DOIs but are not yet published; they provide editors and reviewers access via a URL while maintaining integrity throughout evaluation.
 
-## 7. Require Publication of Datasets Under Review Prior to Article Publication
+## 7. Require Publication of Datasets Under Review Prior to Article Publication {#7}
 
-As mentioned [above](#5-encourage-pre-submission-of-datasets), to streamline automated workflows linking datasets with published articles through respective PIDs, journals must require that datasets marked _under review_ be published before associated articles are released. Authors should receive **clear communication** regarding this process upon acceptance of their manuscripts.
+As mentioned [above](#5), to streamline automated workflows linking datasets with published articles through respective PIDs, journals must require that datasets marked _under review_ be published before associated articles are released. Authors should receive **clear communication** regarding this process upon acceptance of their manuscripts.
 
 ### Communication Tips:
 
 Alongside acceptance notifications, journals should provide authors with corresponding article DOI so they can include this metadata prior to dataset publication.
 
-## 8. Utilize Scholix.org Framework
+## 8. Utilize Scholix.org Framework {#8}
 
 Journals should leverage [**Scholix**](https://doi.org/10.1045/january2017-burton) as a framework for enhancing links between scientific literature and research data—thereby improving interoperability across connected digital objects through Scholix hubs like [DataCite](https://datacite.org/) or [OpenAire](https://www.openaire.eu/). This allows academic publishers to discover relevant datasets even after articles have been published.
 
