--- a/docs/60_topics/62_data_formats/00_format_standards.mdx
+++ b/docs/60_topics/62_data_formats/00_format_standards.mdx
@@ -4,11 +4,11 @@ slug: "/format_standards"
 id: "format_standards"
 ---
 
-# Data format standard
+# Data format standard {#format_standard}
 
 Research data is the key to any science. As part of a [FAIR](/docs/fair) practice, these data should be accompanied by valuable [metadata](/docs/metadata) and have to be exchanged in standardised and open formats. In chemistry these data include experimental parameters and measurement results, chemical structures, properties of compounds and descriptions of reactions. Whenever research data are published, stored, shared or reused, chemists have to decide on a format suitable for the purpose and consider the long-term stages of the [data life cycle](/docs/data_life_cycle). [Repositories](/docs/repositories) and databases often accept specific formats to ensure comparability and completeness of data and metadata provided. If chemists are aware of data standards during data acquisition and research documentation, later conversions will be less challenging. [Electronic lab notebooks](/docs/eln) can support the scientist in the early stages of data management.
 
-## Definitions
+## Definitions {#definitions}
 
 A successful data format standard is defined by the data model and the data representation. A specification of a representation may contain the model implicitly.
 
@@ -18,11 +18,11 @@ Digital files containing data are only one way to represent a data model. Other 
 
 **File formats** as models can be categorised by different criteria: proprietorially vs. openly specified, binary vs. text, simple vs. complex or flat vs. n-dimensional. For long-term storage, a compact binary format may be the first choice, while for further processing with cheminformatics tools a format based on standards like Comma Separated Values (CSV), Extensible Markup Language (XML) or JavaScript Object Notation (JSON) may be more favourable due to support by most programming languages. When thinking about data strategies, open formats should be considered. Proprietary formats may prevent further reuse due to issues connected to licensing, poor documentation and support by the vendor. Complex data often need more complex formats to express the meaning and relation of data.
 
-The **specification** of a data file standard may describe the whole format from scratch or can utilise generic formats, which are standardised anywhere else. Such [generic formats](#generic-format-standards) include CSV, XML or JSON. For some of these generic formats, a formal specification format is available, called the schema format, which streamlines the specification of format derivatives. XML or JSON files can be described by schemas. If the format cannot be described formally by a general or existing schema, it is important to create an unambiguous new specification, clear in description of syntax, and grammar, as well as in definition of the components of the underlying data model. File formats should also be extendable to allow the usage of the format for new techniques and with future requirements. Data file standards not fulfilling these criteria may fork into incompatible formats or will be outdated soon and replaced by new standards.
+The **specification** of a data file standard may describe the whole format from scratch or can utilise generic formats, which are standardised anywhere else. Such [generic formats](#generic_formats) include CSV, XML or JSON. For some of these generic formats, a formal specification format is available, called the schema format, which streamlines the specification of format derivatives. XML or JSON files can be described by schemas. If the format cannot be described formally by a general or existing schema, it is important to create an unambiguous new specification, clear in description of syntax, and grammar, as well as in definition of the components of the underlying data model. File formats should also be extendable to allow the usage of the format for new techniques and with future requirements. Data file standards not fulfilling these criteria may fork into incompatible formats or will be outdated soon and replaced by new standards.
 
 Any software importing or exporting a file format has to include readers and/or writers for this format, often accompanied by a validator for checking documents for adherence to the standard. Integration of any format into software is more likely if developers may rely on an **implementation**, available as a library, package or module for their programming language or environment. Thus, acceptance of a format also depends on the availability and support of implementations. Formats are more sustainable if they have a free licence and are open source. For formats described by schemas there are often well-maintained implementations for the generic format including validation. So only the schema file has to be provided. Implementations for formats, which are not openly specified and lack vendor support, are sometimes only feasible by reverse engineering, which is debatable concerning legality. Only a complete and unambiguous specification allows well-crafted implementations.
 
-## Generic format standards
+## Generic format standards {#generic_formats}
 
 There are several generic formats to store data in a structured way. The format specifications do not define any domain specific elements, but some fields for document metadata, like a version, may be required to conform the specification. To create domain specific document formats, the elements including semantic descriptions have to be specified separately.
 Some of these formats have a corresponding schema format, which allows a formalised description of documents. Schemas describe the data types, relations and order of elements and attributes in the element. They also have fields for description of the data to add semantic meaning in the context of the format.
@@ -35,7 +35,7 @@ As XML, the [Javascript Object Notation (JSON)](https://www.ecma-international.o
 
 Single datasets may be bundled to be stored as one unit, or large datasets may be split up to smaller files for better handling. Container formats allow to retain the relationship between the datafiles. This can be achieved by interlinking metadata in the datafiles or metafiles, by grouping files in containers or archives like [zip](https://www.iso.org/standard/60101.html) or tar, or by structured container file formats. An example for the cont approach is [HDF5](https://www.hdfgroup.org/solutions/hdf5/), which allows to combine a file system like structure with metadata. There are many implementations and tools for HDF5 and some formats for chemical data are based on it.
 
-## Format standards in chemistry
+## Format standards in chemistry {#chemistry_formats}
 
 Many formats used in chemistry are based on one of the generic formats from the last section. The following table lists some common formats used by chemists.
 
@@ -67,7 +67,7 @@ The XML-based Analytical Information Markup Language (AnIML) has been created to
 
 The [ISA (Investigation-Study-Assay) framework](https://doi.org/10.5281/zenodo.163640), originated from the bioscience community, defines the hierarchical ISA data model to store metadata on project context and study details, and analytical measurement data. As the abstract ISA data model already encourages the user to annotate any parameter or value with ontology terms, it assures well described datasets. Implementations are available as tab separated value files (ISA-Tab) or as JSON (ISA-JSON). The ISA API is a Python library implementing the model for usage with the ISA formats. The model is also applied for repositories such as MetaboLights. Moreover, journals such as ScientificData or GigaScience use the ISA data model to describe complex experimental setups covered in the manuscripts.
 
-### Format standards for analytical Data
+### Format standards for analytical Data {#analytical_data_formats}
 
 Experimental data obtained with spectroscopic methods such as infrared-spectroscopy, Raman and UV/Vis-spectroscopy, are often comparatively small in size and straightforward in their structure. Vendors store the raw data in proprietary formats, either as binary data or in ASCII. These can be exported as (or converted to) Excel spreadsheets or plain text tables with x,y pairs (or similar format). A header section may include metadata.
 
@@ -77,7 +77,7 @@ There are a few vendor formats which are popular for data exchange: GRAMS SPC, P
 
 There were efforts to create a special format for ultraviolet-visible spectroscopy data, which was called [SpectroML](https://doi.org/10.1016/S1535-5535-04-00168-6), which have now been superseded by the more general AnIML . Harmonisation between instrument vendors and adoption of an open standard still needs to be achieved.
 
-#### Data formats for nuclear magnetic resonance spectroscopy (NMR)
+#### Data formats for nuclear magnetic resonance spectroscopy (NMR) {#nmr_formats}
 
 NMR is an indispensable analytical technique providing rich information on bonding and structure as well as molecule interaction and abundance of molecules in samples. Until now, it was common practice to publish the spectra as images in supplementary materials, regularly published as PDF files. Additionally, a list of shifts is reported, sometimes referred to as NMR text.
 
@@ -95,7 +95,7 @@ Recently, there were several additional open standard formats developed by the N
 
 Derived from the self-defining STAR format are the also more protein specific [NMR-STAR](https://doi.org/10.1007/s10858-018-0220-3) which is used by the BioMagResBank (BMRB) data format and defines over 4600 data item tags describing data and metadata, which are organised in more than 300 categories and 80 category groups. The [NMR Exchange Format (NEF)](https://doi.org/10.1038/nsmb.3041) format was developed for storage of NMR data in wwPDB. It is more accessible for software developers by reducing the complexity. Additionally, it is extensible with application-specific tags. As NMR-STAR and NEF both are derived from the STAR format, they are convertible, and the only formats accepted by wwPDB and BMRB. The Collaborative Computing Project for NMR (CCPN) is developing NEF, based on the data model for usage within their protein NMR focused software tools.
 
-#### Data standards in Mass Spectrometry
+#### Data standards in Mass Spectrometry {#ms_formats}
 
 A distinction that is rather important in different disciplines of chemistry is whether a particular spectrum is the data of interest, or whether a set of spectra shall be represented. In the former case, text-based file formats like [JCAMP-DX](https://doi.org/10.1366%2F0003702944027840), Mascot Generic File (MGF) or National Institute for Standards and Technology Mass spectrometry (NIST MSP) may be sufficient. However, for entire runs using, e.g., LC-MS or GC-MS with hundreds of chromatography-resolved spectra, more efficient file formats have been developed. The netCDF (Network Common Data Form) based [Analytical Data Interchange Protocol for Mass Spectrometry (ANDI-MS)](https://doi.org/10.1021/ac002727b) is an ASTM International standard. It was developed initially as an Analytical Instrument Association (AIA) standard as a follow-up of the ANDI for Chromatographic Data specification. Technically, it builds upon [NetCDF](https://doi.org/10.1109/38.56302), a generic and highly efficient container format. The ANDI-MS specification defines which elements are needed to encode mass spectrometry data.
 
@@ -103,7 +103,7 @@ More complex MS experiments require capturing a rich set of instrumental setting
 
 The XML-based nature of these formats ensures that the data is readable by most, if not all, computer systems and programming languages long-term. To improve performance for fast random access and parallel processing of data, the same data model was used in several formats like [mz5](https://doi.org/10.1074/mcp.O111.011379), [Toffee](https://doi.org/10.1038/s41598-020-65015-y) and [mzMLb](https://doi.org/10.1021/acs.jproteome.0c00192) which are based on HDF5, which itself is a container format and can be considered the successor to netCDF.
 
-#### Data Standards in X-ray Crystallography
+#### Data Standards in X-ray Crystallography {#xray_formats}
 
 Crystal structure analyses by X-ray diffraction are fundamental techniques in chemistry to determine the atomic and molecular structure of materials. These techniques measure the angles and intensities of a diffracted x-ray beam and calculate structural information from the data. In case of single-crystal measurements, the raw datasets can be very large, while other methods like powder x-ray diffraction produce only two-dimensional raw data. Therefore, data from the latter are exchanged in simple text files, exported from the instrument vendor software.
 
@@ -111,7 +111,7 @@ With the [Crystallographic Information File (CIF)](https://doi.org/10.1107/S0108
 
 Databases and repositories such as The [Cambridge Structural Database (CSD)](https://doi.org/10.1107/S2052520616003954) and [Crystallography Open Database (COD)](https://doi.org/10.1093/nar/gkr900) will only accept CIF as format to deposit crystallographic data.
 
-#### Data Standards in X-Ray Absorption and Fluorescence Spectroscopy
+#### Data Standards in X-Ray Absorption and Fluorescence Spectroscopy {#abs_fluoresc_formats}
 
 X-Ray absorption (XAS) as well as x-ray fluorescence (XRF) generates simple spectra described by the monochromatic x-ray radiation on the abscissa and the absorption of the sample on the ordinate. The spectra can be exported to in formats based on CSV, with multiple columns, but the units (e.g. energy, wavelength), column format and the included metadata often depend on the software used for measurement on the beamline or instrument, which interferes with interoperability. To compare XAS and XRF data measured on different beamlines and devices, it is also important to include parameters of the instrument and calibration into the dataset. For larger sets of XAS data the HDF5 format is [considered as standard format](https://doi.org/10.1107/S0909049512036886), which is already used by some beamline software, such as BLISS on the ESRF.
 
@@ -119,7 +119,7 @@ For the interchange of single X-Ray absorption spectra, the [XAFS Data Interchan
 
 There is no existing standard for XRF files, so most of the software tools provide some kind of import dialog to select matching columns and units from text files exported by the vendor software or can read data contained in HDF5 files.
 
-### Format standards for structural Data
+### Format standards for structural Data {#structural_data_formats}
 
 To describe chemical structures as a simple ASCII string there is the SMILES format, which is an open standard as OpenSMILES since 2007. For more information about SMILES and its variants read the [simplified molecular-input line-entry system (SMILES)](/docs/smiles) article in this knowledge base.
 
@@ -133,7 +133,7 @@ The structure data file (SDF) is a derivative of the chemical data file and can 
 
 [The Chemical Markup Language (CML) ](http://cml.sourceforge.net/) is based on XML and is an approach to store many chemical data in an universal file format to store. Although it is capable to store also analytical data, it is mainly used for structural information and reactions.
 
-## Sources and further information
+## Sources and further information {#sources}
 
 -   [The value of universally available raw NMR data for transparency, reproducibility, and integrity in natural product research](https://doi.org/10.1039/C7NP00064B)
 -   [Dissemination of original NMR data enhances reproducibility and integrity in chemical research](https://doi.org/10.1039/C6NP00022C)
