--- a/docs/40_smartlab/41_chemotion_eln/20_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/20_chemotion_eln.mdx
@@ -32,20 +32,7 @@ To get an overview on how and with which tools Chemotion ELN supports you throug
 
 Chemotion assists in planning experiments by offering embedded *structure editors*, reading and generating *chemical identifiers*, and pulling information from *databases*.
 
-<br/>
-<br/>  
-<br/>  
-
-<details>
-  <summary>Detailed information</summary>
-
-  In the Chemotion ELN different entry types can be generated for planning various experimental setups. Generally, all entry types offer the possibility to draw chemical structures directly within the ELN. This is realized by embedded structure editors: *ketcher-rails* and *Ketcher 2* are integrated as default structure editors and furthermore *ChemDraw JS* and *Marvin JS* can be integrated when the needed licences are available.
-
-  All structure editors directly convert the chemical structures into common chemical identifiers such as [*InChI*](https://www.inchi-trust.org/) and [*SMILES*](https://doi.org/10.1021%2Fci00057a005) code and automatically generate a MOL file of the chemical structure. Reversely, chemical structures can be generated in the ELN by importing the codes and files mentioned above and additionally [*CAS numbers*](https://www.cas.org/cas-data/cas-registry).
-
-  The Chemotion ELN directly pulls information from and links entries to databases such as [*PubChem*](https://pubchem.ncbi.nlm.nih.gov/) and [*CAS SciFinder*](https://www.cas.org/solutions/cas-scifinder-discovery-platform/cas-scifinder). Thus, the planning of experiments is facilitated as all relevant information are automatically integrated into the ELN entries.
-
-</details>
+[Find out more](/docs/chemotion_eln_planning)
 
 ### Experiments
 <img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
