add placeholder img

--- a/docs/40_smartlab/41_chemotion_eln/20_chemotion_planning.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/20_chemotion_planning.mdx
@@ -4,7 +4,11 @@ slug: "/chemotion_eln_planning"
 id: "chemotion_eln_planning"
 ---
 
+import useBaseUrl from "@docusaurus/useBaseUrl";
+
 # Chemotion ELN: Planning
+
+<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
 
 In the Chemotion ELN different entry types can be generated for planning various experimental setups. Generally, all entry types offer the possibility to draw chemical structures directly within the ELN. This is realized by embedded structure editors: *ketcher-rails* and *Ketcher 2* are integrated as default structure editors and furthermore *ChemDraw JS* and *Marvin JS* can be integrated when the needed licences are available.
 
