add sub page link

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -39,6 +39,7 @@ Chemotion assists in planning experiments by offering embedded *structure editor
 
 During experiments Chemotion supports with *automated calculations*, *structured documentation*, and a *concise overview* of experimental information.
 
+[Find out more](/docs/chemotion_eln_experimemts)
 
 ### Data Generation
 
