add data gen sub page

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -47,16 +47,7 @@ During experiments Chemotion supports with *automated calculations*, *structured
 
 For seamless workflows, *analytical devices* can be connected and directly accessed within the Chemotion ELN.
 
-<br/>
-<br/>  
-<br/> 
-
-<details>
-  <summary>Detailed information</summary>
-
-  Analytical data are usually already generated and stored fully digital. Oftentimes, a link of these data and the analytical devices to the laboratory notebook and the experiments is missing. Chemotion offers the possibility to connect analytical devices in the laboratory to the ELN via [device integration](https://doi.org/10.1016/j.acax.2019.100007). This not only allows for a connection of the devices to the ELN and experiments but also for a remote device control. Thus, analytical devices can be controlled, measurements started, and the progress of measurements monitored directly within the ELN independent on your location.
-
-</details>
+[Find out more](/docs/chemotion_eln_datageneration)
 
 ### Data Collection
 
