edit title and id

--- a/docs/40_smartlab/41_chemotion_eln/60_chemotion_eln_dataanalysis.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/60_chemotion_eln_dataanalysis.mdx
@@ -1,11 +1,11 @@
 ---
 title: "Data Analysis"
 slug: "/chemotion_eln_datanalysis"
-id: "chemotion_eln_dataollection"
+id: "chemotion_eln_datanalysis"
 ---
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-# Chemotion: Data Collection
+# Chemotion: Data Analysis
 
 <img alt="Chemotion ELN Logo" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align= "left" vspace="30" hspace="50"/>
 
