add links to subpages

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -63,13 +63,15 @@ Besides the connection of analytical devices to the Chemotion ELN, data of these
 
 Analyses can be performed directly in the Chemotion ELN by utilizing one of the embedded *spectra editors*.
 
-
+[Find out more](/docs/chemotion_eln_datanalysis)
 
 ### Data Publication
 
 <img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
 
 The Chemotion ELN is connected to several *data repositories* which allows for simple and fast publication of research data.
+
+[Find out more](/docs/chemotion_eln_datapublication)
 
 ## LabIMotion
 
