fit titled to our data life cycle article; add comment

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -26,13 +26,13 @@ To get an overview on how and with which tools Chemotion ELN supports you throug
 
 ## Data Life Cycle Support
 
-### Planning 
+### Experiment Design
 
 <img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
 
-Chemotion assists in planning experiments by offering embedded *structure editors*, reading and generating *chemical identifiers*, and pulling information from *databases*.
+Chemotion assists in experiment design and planning research by offering embedded *structure editors*, reading and generating *chemical identifiers*, and pulling information from *databases*.
 
-[Find out more](/docs/chemotion_eln_planning)
+[Find out more](/docs/chemotion_eln_experimentDesign)
 
 ### Experiments
 <img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
@@ -72,6 +72,10 @@ Analyses can be performed directly in the Chemotion ELN by utilizing one of the 
 The Chemotion ELN is connected to several *data repositories* which allows for simple and fast publication of research data.
 
 [Find out more](/docs/chemotion_eln_datapublication)
+
+<br/>
+<br/>  
+<br/>  
 
 ## LabIMotion
 
