--- a/docs/40_smartlab/41_chemotion_eln/20_chemotion_eln_experimentDesign.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/20_chemotion_eln_experimentDesign.mdx
@@ -1,14 +1,16 @@
 ---
-title: "Planning"
-slug: "/chemotion_eln_planning"
-id: "chemotion_eln_planning"
+title: "Experiment Design"
+slug: "/chemotion_eln_experimentDesign"
+id: "chemotion_eln_experimentDesign"
 ---
 
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
-# Chemotion ELN: Planning
+# Chemotion ELN: Experiment Design
 
-<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
+<img alt="Placeholder for an illustration of a laptop and arrows showing info being pulled from databases. The screen shows InChI Ids and SMILES codes, as well as chem. sructures" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
+ 
+{/* COMMENT (Nikki): What about planning in terms of importing data from repositories; literature management; what about rights responsiblities */}
 
 In the Chemotion ELN different entry types can be generated for planning various experimental setups. Generally, all entry types offer the possibility to draw chemical structures directly within the ELN. This is realized by embedded structure editors: *ketcher-rails* and *Ketcher 2* are integrated as default structure editors and furthermore *ChemDraw JS* and *Marvin JS* can be integrated when the needed licences are available.
 
