--- a/docs/40_smartlab/41_chemotion_eln/30_chemetion_experiment.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/30_chemetion_experiment.mdx
@@ -1,14 +1,14 @@
 ---
-title: "Experiments"
-slug: "/chemotion_eln_experimemts"
-id: "chemotion_eln_experimemts"
+title: "Experiment"
+slug: "/chemotion_eln_experiment"
+id: "chemotion_eln_experiment"
 ---
 import useBaseUrl from "@docusaurus/useBaseUrl";
 
 
-# Chemotion: Experiments
+# Chemotion: Experiment
 
-<img alt="Chemotion ELN Logo" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align= "left" vspace="30" hspace="50"/>
+<img alt="Placeholder: screenshot/abstraction on illustrated laptop screen?" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align= "left" vspace="30" hspace="50"/>
 
 As relevant information on chemical compounds such as molar mass, density, and purity are stored within the ELN, Chemotion automatically calculates all relevant amounts saving a researcher's time and preventing miscalculations and typos. Furthermore, predefined text snippets and the transfer of reaction information to the description of experiments allow for a fast and facile documentation.
 
