combine to data collection

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -34,28 +34,26 @@ Chemotion assists in experiment design and planning research by offering embedde
 
 [Find out more](/docs/chemotion_eln_experimentDesign)
 
-### Experiments
+### Experiment
+
 <img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
 
 During experiments Chemotion supports with *automated calculations*, *structured documentation*, and a *concise overview* of experimental information.
 
-[Find out more](/docs/chemotion_eln_experimemts)
-
-### Data Generation
-
-<img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
-
-For seamless workflows, *analytical devices* can be connected and directly accessed within the Chemotion ELN.
-
-[Find out more](/docs/chemotion_eln_datageneration)
+[Find out more](/docs/chemotion_eln_experimemt)
 
 ### Data Collection
 
 <img alt="Placeholder" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align="left" vspace="30" hspace="50"/>
 
+For seamless workflows, *analytical devices* can be connected and directly accessed within the Chemotion ELN.
+
 Besides the connection of analytical devices to the Chemotion ELN, data of these devices can be automatically transferred, file formats converted, and metadata mapped.
 
+
 [Find out more](/docs/chemotion_eln_datacollection)
+
+
 
 ### Analysis
 
