add comment on data processing

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -53,7 +53,7 @@ Besides the connection of analytical devices to the Chemotion ELN, data of these
 
 [Find out more](/docs/chemotion_eln_datacollection)
 
-
+{/* Comment (Nikki):What about data processing (see data lifecycle article)? */}
 
 ### Analysis
 
