add labimotion logo

--- a/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/10_chemotion_eln.mdx
@@ -77,6 +77,8 @@ The Chemotion ELN is connected to several *data repositories*. Incorperated publ
 
 ## LabIMotion
 
+<img alt="LabIMotion logo" src={useBaseUrl('/img/LabIMotion_logo.png')} width="200" align="left" vspace="30" hspace="50"/>
+
 In addition to its primary focus on chemistry, the ELN is also utilized in various other disciplines due to its versatile functionality that caters to the needs of scientists operating in interdisciplinary environments. These generic elements are continually being refined and adapted. The latest extension, introduced in November 2023, is [LabIMotion](https://www.chemotion.net/docs/labimotion), which enables users to incorporate entirely non-chemical functionalities by designing new modules.
 
 
