--- a/docs/40_smartlab/41_chemotion_eln/50_chemotion_eln_dataCollection.mdx
+++ b/docs/40_smartlab/41_chemotion_eln/50_chemotion_eln_dataCollection.mdx
@@ -9,11 +9,12 @@ import useBaseUrl from "@docusaurus/useBaseUrl";
 
 <img alt="Chemotion ELN Logo" src={useBaseUrl('/img/ChemotionELN_Logo.png')} width="200" align= "left" vspace="30" hspace="50"/>
 
-Analytical data are usually already generated and stored fully digital. Oftentimes, a link of these data and the analytical devices to the laboratory notebook and the experiments is missing. Chemotion offers the possibility to connect analytical devices in the laboratory to the ELN via [device integration](https://doi.org/10.1016/j.acax.2019.100007). This not only allows for a connection of the devices to the ELN and experiments but also for a remote device control. Thus, analytical devices can be controlled, measurements started, and the progress of measurements monitored directly within the ELN independent on your location.
 
-When analytical devices are connected to the Chemotion ELN, data can easily be transferred to the ELN. By using the naming conventions of experimental entries in the ELN for analytical data to be transferred, these will be automatically deposited in the corresponding ELN entry. Thus, analytical data are seamlessly connected to experiments.
+Analytical data are typically generated and stored in a fully digital format. However, there is often a disconnect between these data, the associated analytical devices, and the laboratory notebook documenting the experiments. Chemotion ELN addresses this issue by enabling the integration of analytical devices with the ELN through [device integration](https://doi.org/10.1016/j.acax.2019.100007). This feature not only facilitates linking devices to the ELN and experiments but also allows for remote control of the devices. As a result, users can manage device operations, initiate measurements, and monitor progress directly within the ELN from any location.
 
-Data of analytical devices might be stored in proprietary file formats depending on the devices used. For compliance with the [FAIR data principles](docs/fair), Chemotion is able to convert such files to the text-based, open source file format *JCAMP-DX*. The conversion is automatically performed after the transfer of data from analytical devices by the Chemotion tool [*ChemConverter*](https://chemotion.net/docs/services/chemconverter) whereupon both the proprietary file format and the converted file format are stored within the ELN.
+When analytical devices are connected to the Chemotion ELN, data is easily transferred to the ELN. The transfer maps generated data to experiment entries by employing the experiment naming conventions. Thus, analytical data are seamlessly connected to experiments.
+
+In many cases, analytical devices might store data in proprietary file formats. To enable the [FAIR data principles](docs/fair), Chemotion is able to convert such files to the text-based, open source file format *JCAMP-DX*. This conversion occurs automatically once data has been transferred from the analytical device. The Chemotion tool [*ChemConverter*](https://chemotion.net/docs/services/chemconverter) carries out this process and stores both the proprietary file format and the converted file format within the ELN.
 
 Generally, Chemotion supports researchers with their data collection by semi-automated metadata mapping. Here, Chemotion identifies and extracts metadata from analytical data files and writes them into the corresponding, standardized input fields.
 
